--- a/shop-project/index.html
+++ b/shop-project/index.html
@@ -4,10 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Shop-project</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="reset.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-3"><div class="logo">
+                    <a href=""><img src="images/logo.png" alt=""></a>
+                </div></div>
+                <div class="col-6">
+                    <nav>
+                        <ul class="menu">
+                            <li><a href="">Home</a></li>
+                            <li class="products"><a href="">Products</a>
+                            <ul class="submenu">
+                                <li>Lorem ipsum dolor</li>
+                                <li>Sit amet</li>
+                                <li>Consectetur adipising</li>
+                                <li>Tempor incididunt</li>
+                                <li>Dolore magna aliqua</li>
+                                <li>Ut enim ad minim veniam</li>
+                                <li>Quis nostrud</li>
+                            </ul>
+                            </li>
+                            <li><a href="">Shipping</a></li>
+                            <li><a href="">Payment</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-3">search</div>
+            </div>
+        </div></header>
+    <main class="main">Main</main>
+    <footer class="footer">Footer</footer>
 </body>
 </html>
