--- a/shop-project/index.html
+++ b/shop-project/index.html
@@ -38,7 +38,21 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="col-3">search</div>
+                <div class="col-3">
+                    <div class="search""><form class="searchform action="">
+                        <input class="searchinput" type="search" placeholder="search"  >
+                        <div class="searchimg"><img  src="images/Search.png" alt="">
+                        </div>
+                    </form>
+                    </div>
+                     <div class="basket"> 
+                    <img src="images/basket.png" alt="">
+                    <div class="basketitems">
+                        4
+                    </div>
+                    </div>
+                    
+                </div>
             </div>
         </div></header>
     <main class="main">Main</main>
